deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasky
  namespace: tasky
  labels:
    app: tasky
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tasky
  template:
    metadata:
      labels:
        app: tasky
    spec:
      imagePullSecrets:
        - name: dockerhub
      containers:
        - name: tasky
          image: jeffthorne/tasky:latest
          imagePullPolicy: "Always"
          env:
            - name: MONGO_HOST
              value: "3.84.206.47"
            - name: MONGO_PORT
              value: "27017"
            - name: MONGO_USER
              value: "colin"
            - name: MONGO_PASSWORD
              value: "password"
            - name: MONGO_DB
              value: "tasky"
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: tasky-service
  namespace: tasky
  labels:
    app: tasky
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      name: tasky-endpoint
  selector:
    app: tasky
